--- a/src/components/Section/Identification/ApplicantBirthPlace/ApplicantBirthPlace.scss
+++ b/src/components/Section/Identification/ApplicantBirthPlace/ApplicantBirthPlace.scss
@@ -18,7 +18,6 @@
       padding-top: 0;
 
       label {
-        display: inline;
         position: relative;
       }
     }
