--- a/src/views/Form/Form.scss
+++ b/src/views/Form/Form.scss
@@ -33,7 +33,7 @@
 
     /* end-of-section review options */
     .review-screen {
-      padding: 0 8rem 0 4rem;
+      padding: 0 17.5%;
 
       h1 {
         padding: 0;
